fix(Mobile View Optimization): LIV-3254:  Updated Custom Table Component and added Horizontal Scrollable Functionality

--- a/src/modules/shared/components/CustomTable/styles.less
+++ b/src/modules/shared/components/CustomTable/styles.less
@@ -11,8 +11,6 @@
     padding: 2px 0.78571429em !important;
     cursor: default !important;
     border: 0.5px solid rgb(211, 211, 211) !important;
-    overflow-x: 'auto' !important;
-    overflow-y: 'auto' !important;
   }
   th.sorted {
     background-color: @greyExtraTable !important;
